--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ngx-facebook": "^2.4.0",
     "ngx-gallery": "^5.10.0",
     "ngx-pagination": "^4.1.0",
+    "prerender-node": "^3.2.5",
     "protractor": "~5.4.0",
     "rxjs": "~6.4.0",
     "ts-node": "~7.0.0",
